2015-05-XX   1.13.0:
--------------------
  * always_include_files errors out (exits) on files that aren't there (#387)
  * use versioneer 0.14 (#385)


2015-04-28   1.12.1:
--------------------
  * fix regression in always_include_files that causes build failure (#386)


2015-04-10   1.12.0:
--------------------
  * correctly fix egg directories that are part of the package
  * use the --force-rpath flag to patchelf
  * update MACOSX_DEPLOYMENT_TARGET to 10.6
  * fix running tests for Python packages whose version differs from the
    version in conda
  * fix some Python 3 issues with pipbuild
  * don't allow packages to depend on themselves
  * allow to use the r- prefix in conda skeleton cran
  * make recommended r packages depend on r-base in skeleton cran
  * new post-build logic on OS X. All libraries on OS X now include LC_RPATH,
    which points to the environment lib directory, and use and install name
    using @rpath
  * don't set DYLD_FALLBACK_LIBRARY_PATH in cran recipes (the new LC_RPATH
    logic on OS X makes this unnecessary)
  * fix conda build --build-only when the long build prefix is used
  * make conda inspect linkages work on OS X
  * don't hide the traceback for maximum recursion depth exceeded errors
  * add conda inspect objects, for inspecting object files in packages
    (OS X only)
  * add --untracked flag to conda inspect linkages
  * build R packages against a specific version of R
  * decompress .tar.z files
  * add support for GitHub urls in conda skeleton cran


2015-03-05   1.11.0:
--------------------
  * add 'script_env' key in build section of meta.yaml file, which is a list
    of environment variable names which are made available in the build
    script.  If a variable is listed here, but is not in the environment,
    the value '<UNDEFINED>' is assigned.
  * Handle OSError in conda index
  * Fix how the PATH environment variable is set on Windows
  * Remove the work directory earlier in the build