@@ -2,6 +2,7 @@
 --------------------
   * always_include_files errors out (exits) on files that aren't there (#387)
   * use versioneer 0.14 (#385)
+  * resolve circular dependencies in conda-skeleton (#409)
 
 
 2015-04-28   1.12.1:
